Fix spacing in navigation icons

--- a/src/css/blocks/navigation.css
+++ b/src/css/blocks/navigation.css
@@ -61,7 +61,10 @@
 .putainde-Nav .putainde-Icon { font-size: 1.6rem; }
 
   /* icons for item with label can be smaller */
-  .putainde-Nav :not(.r-Tooltip) .putainde-Icon { font-size: 1.2rem; }
+  .putainde-Nav :not(.r-Tooltip) .putainde-Icon {
+    font-size: 1.2rem;
+    margin-right: 0.25rem; /* temporary fix for spacing; remove this when SVGs are inline */
+  }
 
 @media (max-width:29em) {
   /* hide icons for Nav-item that have a label on small screen */
